Fixed homepage header alignment for smaller screens

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,7 +160,7 @@ header {
     display: inline-block;
     height: 19%;
     position: absolute;
-    top: 38%;
+    top: 30%;
     bottom: 30%;
     margin: auto;
     left: 8%;
